--- a/Exercises/sorting/SelectionSortMCQ5.html
+++ b/Exercises/sorting/SelectionSortMCQ5.html
@@ -5,12 +5,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 <script type="text/javascript"
-   src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/dev/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
+   src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
 </script>
-  <script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
-  <script src="../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+  <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
+  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 <body>
 
