Removed the weights after testing

--- a/Exercises/Sorting/BubbleSortMCSummary.html
+++ b/Exercises/Sorting/BubbleSortMCSummary.html
@@ -13,12 +13,12 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
  <body>
-      <div class="exercise" data-name="BubbleSortMCQ1" data-weight="2"></div>  
-      <div class="exercise" data-name="BubbleSortMCQ2" data-weight="3"></div>
-	  <div class="exercise" data-name="BubbleSortMCQ3" data-weight="4"></div>  
-	  <div class="exercise" data-name="BubbleSortMCQ4" data-weight="5"></div>  
-	  <div class="exercise" data-name="BubbleSortMCQ5" data-weight="6"></div>  
-	  <div class="exercise" data-name="BubbleSortMCQ6" data-weight="7"></div>
-	  <div class="exercise" data-name="BubbleSortMCQ7" data-weight="8"></div>  
+      <div class="exercise" data-name="BubbleSortMCQ1" ></div>  
+      <div class="exercise" data-name="BubbleSortMCQ2" ></div>
+      <div class="exercise" data-name="BubbleSortMCQ3" ></div>  
+      <div class="exercise" data-name="BubbleSortMCQ4" ></div>  
+      <div class="exercise" data-name="BubbleSortMCQ5" ></div>  
+      <div class="exercise" data-name="BubbleSortMCQ6" ></div>
+ 
   </body>
 </html>
