--- a/Exercises/Sorting/HashingMCSummary.html
+++ b/Exercises/Sorting/HashingMCSummary.html
@@ -13,17 +13,17 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
  <body>
-      <div class="exercise" data-name="HashingMCQ1" data-weight="2"></div>  
-      <div class="exercise" data-name="HashingMCQ2" data-weight="3"></div>
-	  <div class="exercise" data-name="HashingMCQ3" data-weight="4"></div>  
-	  <div class="exercise" data-name="HashingMCQ4" data-weight="5"></div>  
-	  <div class="exercise" data-name="HashingMCQ5" data-weight="6"></div>  
-	  <div class="exercise" data-name="HashingMCQ6" data-weight="7"></div>
-	  <div class="exercise" data-name="HashingMCQ7" data-weight="8"></div>
-	  <div class="exercise" data-name="HashingMCQ8" data-weight="9"></div>  
-	  <div class="exercise" data-name="HashingMCQ9" data-weight="10"></div>  
-	  <div class="exercise" data-name="HashingMCQ10" data-weight="11"></div>
-      <div class="exercise" data-name="HashingMCQ11" data-weight="12"></div>  	  
+      <div class="exercise" data-name="HashingMCQ1" ></div>  
+      <div class="exercise" data-name="HashingMCQ2" ></div>
+	  <div class="exercise" data-name="HashingMCQ3" ></div>  
+	  <div class="exercise" data-name="HashingMCQ4" ></div>  
+	  <div class="exercise" data-name="HashingMCQ5" ></div>  
+	  <div class="exercise" data-name="HashingMCQ6" ></div>
+	  <div class="exercise" data-name="HashingMCQ7" ></div>
+	  <div class="exercise" data-name="HashingMCQ8" ></div>  
+	  <div class="exercise" data-name="HashingMCQ9" ></div>  
+	  <div class="exercise" data-name="HashingMCQ10" ></div>
+          <div class="exercise" data-name="HashingMCQ11" ></div>  	  
 	  
   </body>
 </html>
