Removed the weights after testing

--- a/Exercises/Sorting/SelectionSortMCSummary.html
+++ b/Exercises/Sorting/SelectionSortMCSummary.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
  <body>
-      <div class="exercise" data-name="SelectionSortMCQ1" data-weight="2"></div>  
-      <div class="exercise" data-name="SelectionSortMCQ2" data-weight="3"></div>
-	  <div class="exercise" data-name="SelectionSortMCQ3" data-weight="4"></div>  
-	  <div class="exercise" data-name="SelectionSortMCQ4" data-weight="5"></div>  
-	  <div class="exercise" data-name="SelectionSortMCQ5" data-weight="6"></div>  
-	  <div class="exercise" data-name="SelectionSortMCQ6" data-weight="7"></div>
-	  <div class="exercise" data-name="SelectionSortMCQ7" data-weight="8"></div>
+      <div class="exercise" data-name="SelectionSortMCQ1" ></div>  
+      <div class="exercise" data-name="SelectionSortMCQ2" ></div>
+	  <div class="exercise" data-name="SelectionSortMCQ3" "></div>  
+	  <div class="exercise" data-name="SelectionSortMCQ4" ></div>  
+	  <div class="exercise" data-name="SelectionSortMCQ5" ></div>  
+	  <div class="exercise" data-name="SelectionSortMCQ6" ></div>
+	  <div class="exercise" data-name="SelectionSortMCQ7" ></div>
 	   
 	  
   </body>
