--- a/Exercises/Sorting/SelectionSortMCSummary.html
+++ b/Exercises/Sorting/SelectionSortMCSummary.html
@@ -15,7 +15,7 @@
  <body>
       <div class="exercise" data-name="SelectionSortMCQ1" ></div>  
       <div class="exercise" data-name="SelectionSortMCQ2" ></div>
-	  <div class="exercise" data-name="SelectionSortMCQ3" "></div>  
+	  <div class="exercise" data-name="SelectionSortMCQ3" ></div>  
 	  <div class="exercise" data-name="SelectionSortMCQ4" ></div>  
 	  <div class="exercise" data-name="SelectionSortMCQ5" ></div>  
 	  <div class="exercise" data-name="SelectionSortMCQ6" ></div>
