Removed the weights after testing

--- a/Exercises/Sorting/SortAlgCompMCSummary.html
+++ b/Exercises/Sorting/SortAlgCompMCSummary.html
@@ -13,18 +13,18 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
  <body>
-      <div class="exercise" data-name="SortAlgCompMCQ1" data-weight="2"></div>  
-      <div class="exercise" data-name="SortAlgCompMCQ2" data-weight="3"></div>
-	  <div class="exercise" data-name="SortAlgCompMCQ3" data-weight="4"></div>  
-	  <div class="exercise" data-name="SortAlgCompMCQ4" data-weight="5"></div>  
-	  <div class="exercise" data-name="SortAlgCompMCQ5" data-weight="6"></div>  
-	  <div class="exercise" data-name="SortAlgCompMCQ6" data-weight="7"></div>
-	  <div class="exercise" data-name="SortAlgCompMCQ7" data-weight="8"></div>
-	  <div class="exercise" data-name="SortAlgCompMCQ8" data-weight="9"></div>  
-	  <div class="exercise" data-name="SortAlgCompMCQ9" data-weight="10"></div>  
-	  <div class="exercise" data-name="SortAlgCompMCQ10" data-weight="11"></div>
-      <div class="exercise" data-name="SortAlgCompMCQ11" data-weight="12"></div>  	  
-	  <div class="exercise" data-name="SortAlgCompMCQ12" data-weight="13"></div>  	  
-	  <div class="exercise" data-name="SortAlgCompMCQ13" data-weight="14"></div>  	  
+      <div class="exercise" data-name="SortAlgCompMCQ1" ></div>  
+      <div class="exercise" data-name="SortAlgCompMCQ2" ></div>
+      <div class="exercise" data-name="SortAlgCompMCQ3" ></div>  
+      <div class="exercise" data-name="SortAlgCompMCQ4" ></div>  
+      <div class="exercise" data-name="SortAlgCompMCQ5" ></div>  
+      <div class="exercise" data-name="SortAlgCompMCQ6" ></div>
+      <div class="exercise" data-name="SortAlgCompMCQ7" ></div>
+      <div class="exercise" data-name="SortAlgCompMCQ8" ></div>  
+      <div class="exercise" data-name="SortAlgCompMCQ9" ></div>  
+      <div class="exercise" data-name="SortAlgCompMCQ10"></div>
+      <div class="exercise" data-name="SortAlgCompMCQ11"></div>  	  
+      <div class="exercise" data-name="SortAlgCompMCQ12"></div>  	  
+      <div class="exercise" data-name="SortAlgCompMCQ13"></div>  	  
   </body>
 </html>
