Fixed paragraph tags.

--- a/Exercises/Sorting/SortAlgCompMCQ2.html
+++ b/Exercises/Sorting/SortAlgCompMCQ2.html
@@ -25,13 +25,9 @@
     <!-- Question MCQ -->
     
     <div id="problem-type-or-description">
-      <p class="question"> Suppose we are sorting an array of ten
-	integers using a some quadratic sorting algorithm. After four
-	iterations of the algorithm's main loop, the array elements are
-	ordered as shown here:
-	1  2  3  5  4  0  6  7  8  9
-	Which statement is correct? (Note: Our Selection Sort sorts
-	from smallest to largest)</p>
+      <p class="question"> Suppose we are sorting an array of ten integers using a some quadratic sorting algorithm. After four iterations of the algorithm's main loop, the array elements are ordered as shown here:</p>
+	<p>1  2  3  5  4  0  6  7  8  9</p>
+	<p>Which statement is correct? (Note: Our Selection Sort sorts from smallest to largest)</p>
       <div class="solution"><var>"The algorithm might be insertion sort, but could not be selection sort."</var></div>
       <ul class="choices">
 	<li><var>"The algorithm might be either selection sort or insertion sort."</var></li>
