--- a/Exercises/Sorting/ShellSortMCSummary.html
+++ b/Exercises/Sorting/ShellSortMCSummary.html
@@ -13,12 +13,12 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
  <body>
-      <div class="exercise" data-name="ShellSortMCQ1" data-weight="2"></div>  
-      <div class="exercise" data-name="ShellSortMCQ2" data-weight="3"></div>
-	  <div class="exercise" data-name="ShellSortMCQ3" data-weight="4"></div>  
-	  <div class="exercise" data-name="ShellSortMCQ4" data-weight="5"></div>  
-	  <div class="exercise" data-name="ShellSortMCQ5" data-weight="6"></div>  
-	  <div class="exercise" data-name="ShellSortMCQ6" data-weight="7"></div>
+      <div class="exercise" data-name="ShellsortMCQ1" data-weight="2"></div>  
+      <div class="exercise" data-name="ShellsortMCQ2" data-weight="3"></div>
+	  <div class="exercise" data-name="ShellsortMCQ3" data-weight="4"></div>  
+	  <div class="exercise" data-name="ShellsortMCQ4" data-weight="5"></div>  
+	  <div class="exercise" data-name="ShellsortMCQ5" data-weight="6"></div>  
+	  <div class="exercise" data-name="ShellsortMCQ6" data-weight="7"></div>
 	     
 	  
   </body>
