Changing the size of this visualization.

--- a/AV/HuffmanCoding.html
+++ b/AV/HuffmanCoding.html
@@ -15,12 +15,12 @@
 		<style>
 			#container {
 				width: 800px;
-				height: 685px;
+				height: 635px;
 				background-color: #efe;
 				border:1px solid #A5B6C8;
 				padding: 10px;
 				overflow-x: hidden;
-				overflow-y: visible;
+				overflow-y: hidden;
 			}
 
 			#av{
