Heap and Radix sort new questions
Also Insertion sort question 4 changed

--- a/Exercises/Sorting/InsertionSortMCQ4.html
+++ b/Exercises/Sorting/InsertionSortMCQ4.html
@@ -29,10 +29,10 @@
 	search could be used to locate the position within the first <code>i-1</code>
 	elements of the array into which element <code>i</code> should be inserted.
 	Using binary search will:</p>
-      <div class="solution"><var>"Not speed up the asymptotic running time for Insertion Sort becasue shifting the elements to make room for the insert will require " +  <code>\Theta(i)</code></var></div>
+      <div class="solution"><var>"Not speed up the asymptotic running time for Insertion Sort becasue shifting the elements to make room for the insert will require O(i)" </var></div>
       <ul class="choices">
-	<li><var>"Speed up the asymptotic running time for Insertion Sort because the position to insert could be found in " + <code>\Theta(log i)</code></var></li> 
-	<li><var>"Speed up the asymptotic running time for Insertion Sort because shifting the elements to make room for the insert will require " + <code>\Theta(i)</code> </var></li> 
+	<li><var>"Speed up the asymptotic running time for Insertion Sort because the position to insert could be found in O(log i)"</var></li> 
+	<li><var>"Speed up the asymptotic running time for Insertion Sort because shifting the elements to make room for the insert will require O(i)"</var></li> 
 	<li><var> "None of the above"</var></li>	  	 
       </ul>
 	  <div class="hints">
