--- a/Exercises/SelectionSortElement.html
+++ b/Exercises/SelectionSortElement.html
@@ -5,7 +5,7 @@
 #		  Everthing to the left of X is sorted (the i smallest elements in the array)
 #		  Everything to the right is constrained random (must be bigger than the elements to the left).
 #		  Highlighted element needs to be placed in right place by Selection Sort
-#  Variables    : arr_size 0 - 12
+#  Variables    : arr_size 6 - 10
 #  Chapter      : InsetionSort
 #  Author       : Gayathri
 #  Date         : July 20, 2012
@@ -81,23 +81,25 @@
     			jsav = new JSAV("jsav");
 			jsav.recorded();
     			arr = jsav.ds.array(JSAV.utils.rand.numKeys(0, 999, a),{indexed: true, center: false});
-			// arr.hide();
-			for (i=0; i<sort_pos; i++) {
-				small=i;
-				for (j=i+1; j<a;j++) {
-					if (arr.value(j) < arr.value(small) ) 
-						small=j;
-				}
-				arr.swap(i,small);
-			}
-			arr.highlight(sort_pos);
-			// arr.show();
 			arr_clone = jsav.ds.array(JSAV.utils.rand.numKeys(0, 999, a));
                         arr_clone.hide();
                         for (i=0; i<a; i++)
                         {
                                 arr_clone.value(i,arr.value(i));
                         }
+			for (i=0; i<sort_pos; i++) {
+				small=i;
+				for (j=i+1; j<a;j++) {
+					if (arr_clone.value(j) < arr_clone.value(small) ) 
+						small=j;
+				}
+				arr_clone.swap(i,small);
+			}
+                        for (i=0; i<a; i++)
+                        {
+                                arr.value(i,arr_clone.value(i));
+                        }
+			arr.highlight(sort_pos);
 			// bind the clickHandler to handle click events on the array
 			arr.click(clickHandler);
   		}
@@ -130,7 +132,7 @@
 
 	<div class="exercise">
   		<div class="vars">
-    			<var id="arr_size">randRange( 6, 12 )</var>
+    			<var id="arr_size">randRange( 6, 10 )</var>
 			<var id="sort_pos">randRange(0,arr_size-1)</var>
     			<var id="JSAV">initJSAV(arr_size,sort_pos)</var>
 		</div>
