--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -19,13 +19,13 @@
         {%- block haikurel1 %}
         {%- endblock %}
         {%- if prev %}
-        «&#160;&#160;<a href="{{ prev.link|e }}">{{ prev.title }}</a>
+        «&#160;&#160;<a id="prevmod" href="{{ prev.link|e }}">{{ prev.title }}</a>
         &#160;&#160;::&#160;&#160;
         {%- endif %}
         <a  class="uplink" href="{{ pathto(master_doc) }}">{{ _('Contents') }}</a>
         {%- if next %}
         &#160;&#160;::&#160;&#160;
-        <a  href="{{ next.link|e }}">{{ next.title }}</a>&#160;&#160;»
+        <a  id="nextmod" href="{{ next.link|e }}">{{ next.title }}</a>&#160;&#160;»
         {%- endif %}
         {%- block haikurel2 %}
         {%- endblock %}
