More adjustments to ka-jsav.html

--- a/Exercises/ka-jsav.html
+++ b/Exercises/ka-jsav.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 <style>
 .jsavcontainer {
-  height: 100px;
+  height: 250px;
 }
 </style>
 <body>
@@ -29,6 +29,7 @@
     tree = jsav.ds.bintree();
     tree.root(a);
     tree.root().left(b);
+    tree.layout();
   }
   </script>
 	<div class="exercise">
