--- a/Exercises/BubbleSortElement.html
+++ b/Exercises/BubbleSortElement.html
@@ -44,7 +44,7 @@
   		var clickHandler = function(index, e) {
 			var sublist;
 			sublist =0;
-			if ( index <= spos)
+			if ( index >= spos)
 				sublist = 1;
 			if ( sublist == 1 )
 			{
@@ -58,7 +58,7 @@
 					arr.swap(sel1,index);
 					arr.unhighlight(sel1);
 					arr.unhighlight(index);
-					arr.highlight(spos);
+					// arr.highlight(spos);
 					arr.css(index, {"font-size": "100%"});
 					arr.css(sel1, {"font-size": "100%"});
 					nsel = 0;
@@ -113,22 +113,27 @@
                         {
                                 arr_clone.value(i,arr.value(i));
                         }
-			for (i=0; i<(a-sort_pos-1); i++) {
-				for (j=0; j<=(a-i-2);j++) {
-					if (arr_clone.value(j) > arr_clone.value(j+1) ) 
-						arr_clone.swap(j,j+1);
+			for (i=0; i<sort_pos; i++) {
+				for (j=a-1; j>i;j--) {
+					if (arr_clone.value(j) < arr_clone.value(j-1) ) 
+						arr_clone.swap(j,j-1);
 				}
 			}
 			for (i=0; i<a; i++)
                         {
                                 arr.value(i,arr_clone.value(i));
                         }	
-			arr.highlight(sort_pos);
-
+			// arr.highlight(sort_pos);
+			
 			x = x + (46.5*sort_pos);
                         var lin= jsav.g.line(x, y,x, (110 + y), {"stroke-opacity":20, "stroke-width": 4, "stroke":"black", "height":220, "fill-opacity":"yellow"});
 			lin.show();
-			arr_clone.show();
+			// Compute the correct answer
+			for (j=a-1; j>sort_pos;j--) {
+                                if (arr_clone.value(j) < arr_clone.value(j-1) ){
+                                        arr_clone.swap(j,j-1);
+                                }
+                        }
 			// bind the clickHandler to handle click events on the array
 			arr.click(clickHandler);
   		}
@@ -137,13 +142,8 @@
  		// function that validates student's answer 
  		function checkAnswer (a, sort_pos) {
   			var i;
-			var j=0;
+			var j;
 			var temp;
-                                for (j=0; j < sort_pos;j++) {
-                                        if (arr_clone.value(j) > arr_clone.value(j+1) ){
-                                                arr_clone.swap(j,j+1);
-                                }
-                        }
 			// Return false if user has highlighted any position before start_pos
 			for (i=0; i < a; i++) {
 				if ( arr.value(i) != arr_clone.value(i)) return (2 === 1);
@@ -165,9 +165,9 @@
 
   		<div class="problems">
     			<div>
-				<p class="problem"> In the array of size <var>arr_size</var>  displayed below , element at position <var>sort_pos</var> is highlighted. The array represents an intermediate state in bubble sort with all elements to its right sorted (and are bigger) </p>
+				<p class="problem"> The array of size <var>arr_size</var>  displayed below represents an intermediate state in bubble sort. All elements to the left of the line is sorted.</p>
       				<div class="question">
-				<p> In this array, the highlighted element is the current element to be processed in the next pass of Bubble Sort. Show the array after the element has been placed in its proper position (and other elements moved as necessary). </p>
+				<p> In this array, the element to the right of the line is the current element to be processed in the next pass of Bubble Sort. Show the array after the element has been placed in its proper position (and other elements moved as necessary). </p>
 				<div id="jsav"></div>
       			</div>
       			<div class="solution" data-type="custom">
