--- a/Exercises/InsertionInsertElement.html
+++ b/Exercises/InsertionInsertElement.html
@@ -89,9 +89,16 @@
 			}
                         for (i=0; i<a; i++)
                         {
-                                arr.value(i,arr.value(i));
+                                arr.value(i,arr_clone.value(i));
                         }
 			arr.highlight(sort_pos);
+			// Compute the correct Answer
+			for (i=0; i<= sort_pos; i++) {
+                                for (j=i+1; j<=sort_pos;j++) {
+                                        if (arr_clone.value(i) > arr_clone.value(j) )
+                                                arr_clone.swap(i,j);
+                                }
+                        }
 			// bind the clickHandler to handle click events on the array
 			arr.click(clickHandler);
   		}
@@ -100,14 +107,6 @@
  		// function that validates student's answer 
  		function checkAnswer (a, sort_pos) {
   			var i;
-			var j=0;
-			var temp;
-			for (i=0; i<= sort_pos; i++) {
-                                for (j=i+1; j<=sort_pos;j++) {
-                                        if (arr_clone.value(i) > arr_clone.value(j) )
-                                                arr_clone.swap(i,j);
-                                }
-                        }
 			// Return false if user has highlighted any position before start_pos
 			for (i=0; i < a; i++) {
 				if ( arr.value(i) != arr_clone.value(i)) return (2 === 1);
