Rewrite selectionsort-av, add mini-slideshows to Selectionsort.rst

--- a/AV/Sorting/selectionsort-av.html
+++ b/AV/Sorting/selectionsort-av.html
@@ -5,6 +5,11 @@
   <link href="../opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="quadraticsort.css" type="text/css" />
+  <style>
+    #container {
+      height: 610px;
+    }
+  </style>
 </head>
 
 <body>
@@ -38,7 +43,7 @@
       <input size="60" name="arrayValues" id="arrayValues" type="text" />
     </p>
   </form>
-  <div id="avcontainer">
+  <div id="avcontainer" style="margin-top:-20px;">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
